start landing page, route root to prelaunch

--- a/app/views/static_pages/prelaunch.html.erb
+++ b/app/views/static_pages/prelaunch.html.erb
@@ -1,2 +1,16 @@
-<h1>StaticPages#prelaunch</h1>
-<p>Find me in app/views/static_pages/prelaunch.html.erb</p>
+<div class="container-fluid">
+  <section class="row-fluid">
+    <div class="span4">
+      <img src="http://placehold.it/200x200" class="img-circle">
+      <h2>Discover candidates' policy positions.</h2>
+    </div>
+    <div class="span4">
+      <img src="http://placehold.it/200x200" class="img-circle">
+      <h2>Compare and Contrast your position with candidates.</h2>
+    </div>
+    <div class="span4">
+      <img src="http://placehold.it/200x200" class="img-circle">
+      <h2>Make informed voting decisions.</h2>
+    </div>
+  </section>
+</div>
