add hero-unit to launch page

--- a/app/views/static_pages/prelaunch.html.erb
+++ b/app/views/static_pages/prelaunch.html.erb
@@ -1,4 +1,8 @@
 <div class="container-fluid">
+  <div class="hero-unit">
+    <h1>policy compass</h2>
+    <h2>helping you navigate local NY candidates and their policy positions</h2>
+  </div>
   <section class="row-fluid">
     <div class="span4">
       <img src="http://placehold.it/200x200" class="img-circle">
