improve prelaunch page

--- a/app/views/static_pages/prelaunch.html.erb
+++ b/app/views/static_pages/prelaunch.html.erb
@@ -1,20 +1,41 @@
-<div class="container-fluid">
-  <div class="hero-unit">
-    <h1>policy compass</h2>
-    <h2>helping you navigate local NY candidates and their policy positions</h2>
+<div id="wrap">
+  <div class="container-fluid">
+    <div class="hero-unit">
+      <div class="row-fluid">
+        <div class="span8">
+          <h1>policy compass</h2>
+          <h2>helping you navigate local NY candidates and their policy positions</h2>
+        </div>
+        <div class="span4">
+          <div class="login-form">
+            <h3>Keep me in the loop!</h3>
+              <div class="control group">
+                <input type="text" class="login-field" placeholder="Enter your email address" id="login-email">
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section class="row-fluid">
+      <div class="span4">
+        <img src="http://placehold.it/200x200" class="img-circle">
+        <h2>Discover candidates' policy positions.</h2>
+      </div>
+      <div class="span4">
+        <img src="http://placehold.it/200x200" class="img-circle">
+        <h2>Compare and Contrast your position with candidates.</h2>
+      </div>
+      <div class="span4">
+        <img src="http://placehold.it/200x200" class="img-circle">
+        <h2>Make informed voting decisions.</h2>
+      </div>
+    </section>
   </div>
-  <section class="row-fluid">
-    <div class="span4">
-      <img src="http://placehold.it/200x200" class="img-circle">
-      <h2>Discover candidates' policy positions.</h2>
-    </div>
-    <div class="span4">
-      <img src="http://placehold.it/200x200" class="img-circle">
-      <h2>Compare and Contrast your position with candidates.</h2>
-    </div>
-    <div class="span4">
-      <img src="http://placehold.it/200x200" class="img-circle">
-      <h2>Make informed voting decisions.</h2>
-    </div>
-  </section>
+  <div id="push"></div>
 </div>
+<footer>
+  <div class="container-fluid">
+    <p>made by these awesome people</p>
+    <p>march 2013</p>
+  </div>
+</footer>
