--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,127 @@
 @import "bootstrap";
+
+/* custom colors // HT FLAT-UI */
+$light-blue: #3498DB;
+$dark-blue: #2980B9;
+$light-orange: #E67E22;
+$dark-orange: #D35400;
+$light-yellow: #F1C40F;
+$dark-yellow: #F39C12;
+$light-white: #ECF0F1;
+$dark-white: #BDC3C7;
+$light-grey: #95A5A6;
+$dark-grey: #7F8C8D;
+
+/* spacing */
+$large-space: 20px;
+$medium-space: 10px;
+$small-space: 5px;
+
+/* button styles */
+.hero-unit {
+  margin-top: 20px;
+  background-color: $dark-blue;
+  h1 {
+    color: $light-white;
+  }
+  h2 {
+    color: $light-yellow;
+  }
+}
+
+.btn {
+  border: none;
+  background: $light-orange;
+  color: white;
+  font-size: 16.5px;
+  text-decoration: none;
+  text-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  -webkit-transition: 0.25s;
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  transition: 0.25s;
+  -webkit-backface-visibility: hidden;
+  &:hover{
+    background: $dark-orange;
+  }
+}
+
+section {
+  h2 {
+    color: $dark-blue;
+  }
+  padding: 0 $large-space;
+}
+
+footer {
+  background-color: $dark-grey;
+  color: $light-white;
+}
+
+/* flat ui login form */
+.login-form {
+  background-color: $light-orange;
+  border-radius: $medium-space;
+  padding: $large-space;
+  position: relative; 
+  color: $light-white;
+  text-align: center;
+}
+.login-form:before {
+  content: "";
+  border-style: solid;
+  border-width: 12px 12px 12px 0;
+  border-color: transparent $light-orange transparent transparent;
+  height: 0px;
+  position: absolute;
+  left: -12px;
+  top: 35px;
+  width: 0;
+  -webkit-transform: rotate(360deg);
+}
+.login-form .login-field {
+  border-color: transparent;
+  margin: auto;
+  padding: $medium-space $small-space;
+  background-color: $light-white;
+  color: $light-grey;
+  display: block;
+}
+.login-form .login-field:focus {
+  color: $light-orange; 
+}
+
+/* sticky footer */
+html,
+body {
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by it's height */
+  margin: 0 auto -60px;
+}
+
+/* Set the fixed height of the footer here */
+#push,
+footer {
+  height: 60px;
+}
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+  footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
