--- a/app/views/static_pages/prelaunch.html.erb
+++ b/app/views/static_pages/prelaunch.html.erb
@@ -3,31 +3,28 @@
     <div class="hero-unit">
       <div class="row-fluid">
         <div class="span8">
-          <h1>policy compass</h2>
-          <h2>helping you navigate local NY candidates and their policy positions</h2>
+            <h1>policy compass</h1>
+            <h2>helping you navigate local NY candidates and their policy positions</h2>
         </div>
-        <div class="span4">
-          <div class="login-form">
-            <h3>Keep me in the loop!</h3>
-              <div class="control group">
-                <input type="text" class="login-field" placeholder="Enter your email address" id="login-email">
-              </div>
-          </div>
+        <div class="span4 login-form">
+          <h3>Keep me in the loop!</h3>
+          <input type="text" class="login-field span12" placeholder="Email address" id="login-email">
+          <a href="#" class="btn btn-submit">Submit</a>
         </div>
       </div>
     </div>
     <section class="row-fluid">
       <div class="span4">
-        <img src="http://placehold.it/200x200" class="img-circle">
-        <h2>Discover candidates' policy positions.</h2>
+        <%= image_tag "policy.png" %>
+        <h3>Discover candidates' policy positions.</h3>
       </div>
       <div class="span4">
-        <img src="http://placehold.it/200x200" class="img-circle">
-        <h2>Compare and Contrast your position with candidates.</h2>
+        <%= image_tag "candidates.png" %>
+        <h3>Compare and contrast your position with candidates.</h3>
       </div>
       <div class="span4">
-        <img src="http://placehold.it/200x200" class="img-circle">
-        <h2>Make informed voting decisions.</h2>
+        <%= image_tag "vote.png" %>
+        <h3>Make informed voting decisions.</h3>
       </div>
     </section>
   </div>
