--- a/app/views/static_pages/prelaunch.html.erb
+++ b/app/views/static_pages/prelaunch.html.erb
@@ -3,7 +3,7 @@
     <div class="hero-unit">
       <div class="row-fluid">
         <div class="span8">
-            <h1>policy compass</h1>
+            <h1>    <%= image_tag "compass.png" %>policy compass</h1>
             <h2>helping you navigate local NY candidates and their policy positions</h2>
         </div>
         <div class="span4 login-form">
