Lots of stubby views.

--- a/app/views/static_pages/prelaunch.html.erb
+++ b/app/views/static_pages/prelaunch.html.erb
@@ -9,7 +9,7 @@
         <div class="span4 login-form">
           <h3>Keep me in the loop!</h3>
           <input type="text" class="login-field span12" placeholder="Email address" id="login-email">
-          <a href="#" class="btn btn-submit">Submit</a>
+          <a href="#" class="btn btn-submit ashley-btn">Submit</a>
         </div>
       </div>
     </div>
