--- a/app/views/layouts/_question_card.html.haml
+++ b/app/views/layouts/_question_card.html.haml
@@ -1,8 +1,8 @@
 .question-card.well
   .question-text Courage of our questions something incredible is waiting to be known Sea of Tranquility dispassionate extraterrestrial observer.
   .btn-group{:"data-toggle"=>"buttons-radio"}
-    %a.btn.btn-success{:href=>"#"} I agree
-    %a.btn.btn-danger{:href=>"#"} I disagree
+    %a.btn{:href=>"#"} I agree
+    %a.btn{:href=>"#"} I disagree
     %a.btn{:href=>"#"} I don't care
   %a{:href=>"#"} Skip this question
   .question-bottom
