Fancy schmancy onboarding nav & question toggles.
Enabled bootstrap js for the radio toggles on the questions, and put in a custom-designed bit for navigating the onboarding process

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "nav";
 
 /* custom colors // HT FLAT-UI */
 $light-blue: #3498DB;
@@ -55,6 +56,12 @@ $small-space: 5px;
   &:hover{
     background: $light-yellow;
     color: $light-orange;
+  }
+}
+
+.question-opts {
+  .btn.active {
+    @extend .btn-success;
   }
 }
 
