--- a/app/views/layouts/_question_card.html.haml
+++ b/app/views/layouts/_question_card.html.haml
@@ -1,6 +1,6 @@
 .question-card.well
   .question-text Courage of our questions something incredible is waiting to be known Sea of Tranquility dispassionate extraterrestrial observer.
-  .btn-group{:"data-toggle"=>"buttons-radio"}
+  .btn-group.question-opts{:"data-toggle"=>"buttons-radio"}
     %a.btn{:href=>"#"} I agree
     %a.btn{:href=>"#"} I disagree
     %a.btn{:href=>"#"} I don't care
