commenting out some question handling we're not using yet

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -13,11 +13,11 @@
 			Party: <%= @candidate.formal_affiliation %>
 		</div>
 		<div class='span8'>
-			<% if @questions_answered %>
+<!-- 			<% if @questions_answered %>
 				<% @questions_answered.each do |answer| %>
 					<%= @questions_answered.question_body %>
 				<% end %>
-			<% end %>
+			<% end %> -->
 			I've answered questions and they are here. 
 		</div>
 </div>
