--- a/app/views/layouts/_question_card.html.haml
+++ b/app/views/layouts/_question_card.html.haml
@@ -1,5 +1,5 @@
 .question-card.well
-  .question-text Courage of our questions something incredible is waiting to be known Sea of Tranquility dispassionate extraterrestrial observer.
+  .question-text=question_body
   .btn-group{:"data-toggle"=>"buttons-radio"}
     %a.btn{:href=>"#"} I agree
     %a.btn{:href=>"#"} I disagree
