added more views for policies

--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -6,5 +6,5 @@
     %a.btn{:href=>"#"} I don't care
   %a{:href=>"#"} Skip this question
   .question-bottom
-    .org question.org
-    .policy question.policy
+    .org= question.org.name
+    .policy= question.policy.name
