--- a/app/views/static_pages/feed.html.haml
+++ b/app/views/static_pages/feed.html.haml
@@ -3,5 +3,4 @@
   .row-fluid
     .span8.offset2
       %h1 Question time
-      - 5.times do |n|
-        = render :partial => 'layouts/question_card'
+      = render :partial => 'questions/question', :collection => Question.limit(5)
