Better still with the onboarding nav styles.

--- a/app/assets/stylesheets/_nav.css.scss
+++ b/app/assets/stylesheets/_nav.css.scss
@@ -1,4 +1,11 @@
+.onboard-nav-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
 .navbar.progress-nav {
+  display: inline-block;
+
   .navbar-inner {
     padding-left: 0;
     padding-right: 0;
