--- a/app/views/layouts/_onboarding_nav.html.haml
+++ b/app/views/layouts/_onboarding_nav.html.haml
@@ -1,9 +1,10 @@
-.navbar.progress-nav
-  .navbar-inner
-    %ul.nav
-      %li.active
-        %a Sign up
-      %li.active
-        %a Answer questions
-      %li
-        %a Get Matches
+.onboard-nav-container
+  .navbar.progress-nav
+    .navbar-inner
+      %ul.nav
+        %li.active
+          %a Sign up
+        %li.active
+          %a Answer questions
+        %li
+          %a Get Matches
