tweak forms a bit

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -6,6 +6,6 @@
   %h2 Get Started with Policy Compass
   .row-fluid
     -%w[twitter facebook].each do |service|
-      %a.btn.span6{:href=>"/auth/singly?service=#{service}"} Connect with #{service.capitalize}
-      
+      %a.btn.span6{:href=>"/voters/new"} Connect with #{service.capitalize}
+
 
