--- a/app/views/policies/_form.html.haml
+++ b/app/views/policies/_form.html.haml
@@ -1,6 +1,6 @@
 = form_for [@org, @policy], :builder => LabellingFormBuilder do |f|
   = f.text_field :name
   = f.text_field :link
-  = f.text_field :abstract
+  = f.text_area :abstract
   %hr/
   = f.submit "Submit"
