--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,11 +1,37 @@
-%h1 Policy Compass
+#wrap
+  .container-fluid
+    #flash
+      - unless @voter || @org || @candidate
+        .singly
+          %h2 Get Started with Policy Compass
+          .row-fluid
+            -%w[twitter facebook].each do |service|
+              %a.btn.span6{:href=>"/voters/new"} Connect with #{service.capitalize}
+    .hero-unit
+      .row-fluid
+        .span8
+          %h1 policy compass
+          = image_tag "compass.png"
+          %h2 helping you navigate local NY candidates and their policy positions
+        .span4.login-form
+          %h3 Keep me in the loop!
+          %input{:type=>"text", :class=>"login-field span12", :placeholder=>"Email address", :id=>"login-email"}
+          %a{:href=>"#", :class=>"btn btn-submit ashley-btn"} Submit
+    .row-fluid
+      .span4
+        = image_tag "policy.png"
+        %h3 Discover candidates' policy positions.
+      .span4
+        = image_tag "candidates.png"
+        %h3 Compare and contrast your position with candidates.
+      .span4
+        = image_tag "vote.png" 
+        %h3 Make informed voting decisions.
+  #push
+%footer
+  .container-fluid
+    %p made by these awesome people
+    %p march 2013
 
-#flash
-- unless @voter || @org || @candidate
-  .singly
-  %h2 Get Started with Policy Compass
-  .row-fluid
-    -%w[twitter facebook].each do |service|
-      %a.btn.span6{:href=>"/voters/new"} Connect with #{service.capitalize}
 
 
