add name and email validations for org, candidate, and user models to help with login

--- a/app/views/layouts/_main_nav.html.haml
+++ b/app/views/layouts/_main_nav.html.haml
@@ -7,4 +7,4 @@
       %li{:class => :active=="dashboard" ? 'active' : ''}
         %a{:href => "#"} Dashboard
       %li
-        %a{:href => "#"} Log Out
+        %a{:href => "#", :class=>"pull-right"} Log Out
