tweaks to index and nav to prep for login stuff

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,6 +37,10 @@ $small-space: 5px;
   }
 }
 
+body {
+  padding-top: 40px; /*to accoutn for fixed nav*/
+}
+
 .ashley-btn {
   border: none;
   background: $dark-yellow;
