--- a/app/views/static_pages/_form.html.haml
+++ b/app/views/static_pages/_form.html.haml
@@ -5,4 +5,4 @@
   //%a.btn.span6{:href=>"/voters/new"} Connect with #{service.capitalize}
   //%h4 or
 %input{:type=>"text", :class=>"login-field span12", :placeholder=>"Email address", :id=>"login-email"}
-%a{:href=>"#", :class=>"btn btn-submit ashley-btn"} Submit
+= link_to "Sign up now!", signup_path, {:class=>"btn btn-submit ashley-btn"} 
