--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -114,6 +114,20 @@ footer {
   display: block;
 }
 
+#error_explanation {
+  color: #f00;
+  text-align: left;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  @extend .error;
+}
+
 /* sticky footer */
 html,
 body {
