--- a/app/views/layouts/_main_nav.html.haml
+++ b/app/views/layouts/_main_nav.html.haml
@@ -7,11 +7,11 @@
         
       
     %ul.nav.pull-right
-      //  -if signed_in? 
-      //    %li
-      //      = link_to "Profile", current_user
-      //    %li
-      //      = link_to "Sign Out", signout_path, method: "delete"
-      //  -else
-      %li 
-        =link_to "Sign in", "#"
+      -if signed_in? 
+        %li
+          = link_to "Profile", current_user
+        %li
+          = link_to "Sign Out", signout_path, method: "delete"
+      -else
+        %li 
+          =link_to "Sign in", "#"
