--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,8 +1,12 @@
-= form_for @user, :builder => LabellingFormBuilder do |f|
+= form_for @user do |f|
   =render 'shared/error_messages'
+  = f.label :name
   = f.text_field :name
+  = f.label :email
   = f.text_field :email
+  = f.label :password, "Choose a Password (must be at least 6 characters"
   = f.password_field :password
+  = f.label :password_confirmation, "Confirm your Password"
   = f.password_field :password_confirmation
   %hr/
   = f.submit "Submit"
