update :name to :display_name in forms

--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -4,8 +4,8 @@
 <h1>Add new candidate</h1>
 <%= form_for(@candidate) do |f| %>
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :display_name %><br />
+    <%= f.text_field :display_name %>
   </div>
   <div class="field">
     <%= f.label :website %><br />
