--- a/app/views/orgs/_form.html.haml
+++ b/app/views/orgs/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for @org, :builder => LabellingFormBuilder do |f|
-  = f.text_field :name
+  = f.text_field :display_name
   = f.text_field :location
   %h2 Contact Information
   = f.text_field :contact_name
