--- a/app/views/voters/_form.html.haml
+++ b/app/views/voters/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for @voter, :builder => LabellingFormBuilder do |f|
-  = f.text_field :name
+  = f.text_field :display_name
   = f.text_field :formal_affiliation
   = f.text_field :location
   %hr/
