--- a/app/views/layouts/_main_nav.html.haml
+++ b/app/views/layouts/_main_nav.html.haml
@@ -9,7 +9,9 @@
     %ul.nav.pull-right
       -if signed_in? 
         %li
-          = link_to "Profile", current_user
+          = link_to "Dashboard", @current_user
+        %li
+          = link_to "Profile", @current_user
         %li
           = link_to "Sign Out", signout_path, method: "delete"
       -else
