--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,7 @@
         - flash.each do |key, value|
           .flash(class=key)= value
         =yield
+        = debug(params) if Rails.env.development?
       #push
       %footer
         %p made by these awesome people
