--- a/app/views/orgs/_form.html.haml
+++ b/app/views/orgs/_form.html.haml
@@ -1,9 +1,14 @@
-= form_for @org, :builder => LabellingFormBuilder do |f|
+= form_for @org do |f|
+  = f.label :display_name
   = f.text_field :display_name
+  = f.label :location
   = f.text_field :location
   %h2 Contact Information
+  = f.label :contact_name
   = f.text_field :contact_name
+  = f.label :phone_number
   = f.text_field :phone_number
+  = f.label :website
   = f.text_field :website
   %hr/
   = f.submit "Submit"
