--- a/app/views/layouts/_main_nav.html.haml
+++ b/app/views/layouts/_main_nav.html.haml
@@ -3,7 +3,7 @@
     =link_to "Policy Compass", root_path, {:class=>"brand"}
     %ul.nav
       %li{:class => :active=="about" ? 'active' : ''}
-        %a About
+        = link_to "About", about_path
         
       
     %ul.nav.pull-right
