--- a/app/views/static_pages/knight_challenge.html.haml
+++ b/app/views/static_pages/knight_challenge.html.haml
@@ -3,7 +3,7 @@
     .span12
       = image_tag "compass.png"
       %h1 policy compass
-      %h2 helping you navigate local NY candidates and their policy positions
+      %h2 helping you navigate local NY politicians and their policy positions
       %hr
       - unless signed_in?
         =render partial: 'form'
@@ -20,8 +20,8 @@
   .span4
     %h3 Voters
   .span4
-    %h3 Candidates
-%h2 For Voters and Candidates
+    %h3 Politicians
+%h2 For Voters and Politicians
 .row-fluid
   .span4
     %h3 Discover
