--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -5,7 +5,7 @@
   Voter
   = radio_button_tag 'usertype', 'Organization'
   Organization
-  = radio_button_tag 'usertype', 'Candidate'
+  = radio_button_tag 'usertype', 'Politician'
   Candidate
   = f.label :name
   = f.text_field :name
