--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,10 @@ $grayMediumLight: #eaeaea;
   box-sizing: border-box;
 }
 
+@mixin text_shadow {
+  text-shadow: $light-grey -1px -1px;
+}
+
 body {
   font-family: 'Lato', Helvetica, sans-serif;
 }
@@ -36,6 +40,7 @@ $small-space: 5px;
   background-color: $dark-blue;
   border-radius: $medium-space;
   text-align: center;
+  @include text_shadow;
   h1 {
     color: $light-white;
   }
