--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,25 +9,29 @@
     =csrf_meta_tags
     / HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file.
     /[if lt IE 9]
-      %script{:src=>'js/html5shiv.js'}
+      %script{:src=>'http://html5shim.googlecode.com/svn/trunk/html5.js'}
   %body
-    #wrap
-      .row-fluid.titlebar
-        .span10
-          %h1 policy compass
-          %h2 helping you navigate local NY politicians and their policy positions
-          - unless signed_in?
-            =render partial: 'form'
-        .span2.logo
-          = image_tag "compass.png"
-      .container-fluid
-        =render :partial => 'layouts/main_nav'
-        - flash.each do |key, value|
-          .flash(class=key)= value
-        =yield
-        = debug(params) if Rails.env.development?
-      #push
-      %footer
-        %p made by these awesome people
-        %p march 2013
-        =javascript_include_tag "application"
+    .row-fluid.titlebar
+      .span10
+        %h1 policy compass
+        %h2 navigate the local and national policy landscape
+        - unless signed_in?
+          =render partial: 'form'
+      .span2.logo
+        = image_tag "compass.png"
+    .container-fluid
+      =render :partial => 'layouts/main_nav'
+      - flash.each do |key, value|
+        .flash(class=key)= value
+      =yield
+      = debug(params) if Rails.env.development?
+    %footer
+      %p A project by OpenNY, a member of the Code for America Brigade
+      %p March 2013
+  =javascript_include_tag "application"
+  :javascript
+    $(document).ready(function() {
+      $('.carousel').carousel({
+        interval: 2500
+      })
+    });
