add bariol font

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
       =yield
       = debug(params) if Rails.env.development?
     %footer
-      %p A project by OpenNY, a member of the Code for America Brigade
+      %p A project by OpenNY Forum, a proud member of the Code for America Brigade community.
       %p March 2013
   =javascript_include_tag "application"
   :javascript
