--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,6 +15,17 @@ $light-grey: #95A5A6;
 $dark-grey: #7F8C8D;
 $grayMediumLight: #eaeaea;
 
+@font-face {
+    font-family: 'bariol';
+    src: url('bariol_regular-webfont.eot');
+    src: url('bariol_regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('bariol_regular-webfont.woff') format('woff'),
+         url('bariol_regular-webfont.ttf') format('truetype'),
+         url('bariol_regular-webfont.svg#bariol_regularregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 @mixin blue_gradient {
   background: #3498db; /* Old browsers */
   background: -moz-linear-gradient(top, #3498db 0%, #2980b9 100%); /* FF3.6+ */
