--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -247,3 +247,12 @@ footer {
   margin-top: 45px;
   @include box_sizing;
 }
+
+#github {
+  position: absolute; top: 0; left: 0; border: 0;
+  z-index: 3;
+}
+
+.navbar {
+  z-index: 1;
+}
