--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,8 +60,20 @@ $large-space: 20px;
 $medium-space: 10px;
 $small-space: 5px;
 
-.navbar {
+.facebook {
   background: $dark-blue;
+}
+
+.twitter {
+  background: $light-blue;
+}
+
+.github {
+  background: $dark-yellow;
+}
+
+.email {
+  background: $light-orange;
 }
 
 /* button styles */
@@ -152,7 +164,7 @@ section {
 footer {
   background-color: $dark-grey;
   color: $light-white;
-  padding: $medium-space;
+  padding: $large-space;
 }
 
 /* flat ui login form */
@@ -170,6 +182,7 @@ footer {
     margin-bottom: $medium-space;
   }
 }
+
 .login-form .login-field {
   border-color: transparent;
   padding: $large-space $medium-space;
@@ -192,37 +205,6 @@ footer {
   @extend .error;
 }
 
-/* sticky footer */
-html,
-body {
-  height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
-}
-
-/* Wrapper for page content to push down footer */
-#wrap {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  /* Negative indent footer by it's height */
-  margin: 0 auto -60px;
-}
-
-/* Set the fixed height of the footer here */
-#push,
-footer {
-  height: 60px;
-}
-
-/* Lastly, apply responsive CSS fixes as necessary */
-@media (max-width: 767px) {
-  footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
 
 /* clear fix */
 .group:before,
